--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@ title: Robert Schonberger
   <h1>Latest Posts</h1>
   <ul class="posts">
     {% for post in site.posts limit:3 %}
-    <li><span><a href="{{post.url}}">{{ post.title}}</a></span><div id="post">{{post.content}}</div></li>
+    <li>
+      <!-- google_ad_section_start -->
+      <span>
+        <a href="{{post.url}}">
+          {{ post.title}}
+        </a>
+      </span>
+      <div id="post">
+        {{post.content}}
+      </div>
+      <!-- google_ad_section_end -->
+    </li>
     {% endfor %}
   </ul>
   <h1>Blog Posts</h1>
