--- a/index.html
+++ b/index.html
@@ -24,8 +24,23 @@ title: Robert Schonberger
   <h1>Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a> &ndash; <a href="{{post.url}}#disqus_thread">View Comments</a></li>
     {% endfor %}
   </ul>
 </div>
-  
+
+<script type="text/javascript">
+//<![CDATA[
+(function() {
+var links = document.getElementsByTagName('a');
+var query = '?';
+for(var i = 0; i < links.length; i++) {
+if(links[i].href.indexOf('#disqus_thread') >= 0) {
+query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
+}
+}
+document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/robscblog/get_num_replies.js' + query + '"></' + 'script>');
+})();
+//]]>
+</script>
+
