--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: Robert Schonberger
   <h1>Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a> &ndash; <a href="{{post.url}}#disqus_thread">View Comments</a></li>
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>&nbsp;&ndash;&nbsp;<a href="{{post.url}}#disqus_thread">View Comments</a></li>
     {% endfor %}
   </ul>
 </div>
